<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accueil"
    android:orientation="vertical">

  <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/BiblioTech"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/actionbarlogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/theme_fonce"
                android:textSize="17sp"
                android:layout_marginStart="20dp"/>
        </androidx.appcompat.widget.Toolbar>
  
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre"
        android:id="@+id/titre"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton"
        android:id="@+id/bouton"
        android:layout_below="@id/titre"
        android:onClick="search"/>
  </com.google.android.material.appbar.AppBarLayout>

</RelativeLayout>
