<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recherche"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/BiblioTech"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/actionbarlogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/theme_fonce"
                android:textSize="17sp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/search"
                android:textColorHint="@color/theme_fonce"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:id="@+id/search"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/R"
                android:textColor="@color/theme_clair"
                android:textSize="9sp"
                android:onClick="goo"/>

        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Liste"
                android:orientation="vertical"
                android:id="@+id/layoutLivre">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img"
                    />
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>
